# geocodebr

./: .Rbuildignore  .pre-commit-config.yaml  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  codemeta.json  cran-comments.md  dfgeo.rds  geocodebr.Rproj  index.html  pkgdown.yml  search.json  sitemap.xml
R/: RcppExports.R  busca_por_cep.R  cache.R  create_geocodebr_db.R  definir_campos.R  download_cnefe.R  error.R  geocode.R  geocode2.R  geocode2_outputdb.R  geocode_dani.R  geocode_dani_arrow.R  geocode_duck.R  geocode_duck2.R  geocode_like.R  geocode_outuputdb.R  geocode_rafa.R  geocode_rafa_arrow.R  geocode_rafa_local.R  geocode_rafa_outuputdb.R  geocode_reverso.R  geocodebr-package.R  geocodebr.R  geocodebr_cache.R  listar_campos.R  lookup_cases.R  match_aggregated_cases.R  match_aggregated_cases_weighted.R  match_case.R  match_case_insgle_string.R  match_cases.R  match_cases_probabilistic.R  match_weighted_cases.R  match_weighted_cases_probabilistic.R  message.R  onLoad.R  progress_bar.R  reverse_geocode.R  reverse_geocode2.R  set_cache_dir.R  (+4 more)
articles/: geocode.html  geocode_reverso.html  geocodebr.html  index.html
inst/: CITATION
man/: add_abbrev_state_col.Rd  add_precision_col.Rd  busca_por_cep.Rd  clean_cache_dir.Rd  create_geocodebr_db.Rd  create_index.Rd  definir_campos.Rd  definir_pasta_cache.Rd  deletar_pasta_cache.Rd  download_cnefe.Rd  exact_match_case.Rd  geocode.Rd  geocode_dani.Rd  geocode_dani_arrow.Rd  geocode_db.Rd  geocode_duck.Rd  geocode_duck2.Rd  geocode_like.Rd  geocode_rafa.Rd  geocode_rafa_arrow.Rd  geocode_rafa_like.Rd  geocode_rafa_local.Rd  geocode_reverso.Rd  geocodebr.Rd  geocodebr_cache.Rd  get_cache_dir.Rd  list_cached_data.Rd  listar_campos.Rd  listar_dados_cache.Rd  listar_pasta_cache.Rd  lookup_cases.Rd  lookup_weighted_cases.Rd  match_aggregated_cases.Rd  match_aggregated_cases_arrow.Rd  match_case.Rd  (+20 more)
pygeocodebr/: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
pygeocodebr/examples/: basic_usage.py
pygeocodebr/src/pygeocodebr/: api.py  downloader.py  utils.py
pygeocodebr/tests/: __init__.py  conftest.py  test_cache.py
(+106 files in other folders)
