[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygeocodebr"
version = "0.1.0"
description = "Python port of geocodebr - Geocoding library for Brazilian addresses"
authors = [
    {name = "IPEA", email = "ipea@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["geocoding", "brazil", "addresses", "spatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "duckdb>=1.0.0",
    "pyarrow>=16.1.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
    "platformdirs>=4.2.0",
    "geopandas>=0.14.0",
    "haversine>=2.8.0",
    "pyreadr>=0.5.0",
    "tqdm>=4.66.0",
]



[project.urls]
Homepage = "https://github.com/ipea/geocodebr"
"Source Code" = "https://github.com/ipea/geocodebr"
"Bug Tracker" = "https://github.com/ipea/geocodebr/issues"
Documentation = "https://ipea.github.io/geocodebr"

[tool.hatch.build.targets.wheel]
packages = ["src/pygeocodebr"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings --cov=src/pygeocodebr --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.uv.workspace]
members = ["."]
